# Sentinel-Engine

./: .gitignore  ARCHITECTURE.md  Anchor.toml  Cargo.toml  LICENSE  LICENSE.md  README.md  SECURITY.md  STRATEGY.md  package-lock.json  package.json
programs/sentinel/: Cargo.toml
programs/sentinel-adaptor/: Cargo.toml
programs/sentinel-adaptor/src/: lib.rs
programs/sentinel/examples/: client_connection.rs
programs/sentinel/src/: lib.rs
scripts/: demo.ts
src/ai/: riskScore.ts
src/lib/: driftMarketSignals.ts  lendingRiskSignals.ts
src/risk/: engine.ts
src/sentinel/: proofs.ts
src/strategies/: drift.ts  index.ts  kamino.ts  marginfi.ts  rebalanceCore.ts  rebalanceExecute.ts
src/vault/: manager.ts
src/vaults/: index.ts
src/vaults/sol/: kamino_adapter.ts  marginfi_adapter.ts
src/vaults/usdc/: kamino_adapter.ts  marginfi_adapter.ts
tests/: sentinel-adaptor.ts  sentinel.ts
